--- a/css/less/main.less
+++ b/css/less/main.less
@@ -78,17 +78,49 @@ nav{
 }
 
 #mainModel{
-    margin: 10vw auto;
+    margin: 3vw auto;
     width: 50vw;
+    background-color: @darkgreen;
+    padding: 1rem;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px black;
+    table{
+        border-collapse: separate;
+        border-spacing: 0 1rem;
+        width: 100%;
+        td{
+            text-align: center;
+            border-bottom: 2px solid black;
+            border-top: 2px solid black;
+            background-color: @lightblue;
+            padding: 1.5rem;
+            box-shadow: 5px 3px 5px black;
+            transition: background-color 0.5s, box-shadow 0.5s;
+        }
+        td:first-child{
+            border-left: 2px solid black;
+            border-radius: 10px 0 0 10px;
+        }
+        td:last-child{
+            border-right: 2px solid black;
+            border-radius: 0 10px 10px 0;
+        }
+        tbody{
+            tr{
+                cursor: pointer;
+            }
+        }
+        tr:hover td{
+            background-color: @lightblue-hover;
+            box-shadow: none;
+        }
+
+    }
 }
 
 #loginBox {
     margin: auto;
     width: 30vw;
-    background-color: @darkgreen;
-    padding: 1rem;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px black;
     h2{
         text-align: center;
         margin: 0;
@@ -97,11 +129,13 @@ nav{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        align-content: center;
         label{
-            width: 100%;
+            width: 60%;
         }
         input{
-            width: 100%;
+            width: 50%;
+            margin: 0 25%;
             height: 1.5rem;
             border-color: @navbarcolor;
             border-radius: 10px;
@@ -128,43 +162,5 @@ nav{
 .break {
     flex-basis: 100%;
     height: 0;
-}
-
-#mainBox{
-    background-color: @darkgreen;
-    padding: 2rem;
-    table {
-        border-collapse: separate;
-        border-spacing: 0 1rem;
-        min-width: 100%;
-        tbody{
-            tr{
-                cursor: pointer;
-            }
-        }
-        tr{
-            td{
-                text-align: center;
-                border-bottom: 2px solid black;
-                border-top: 2px solid black;
-                background-color: @lightblue;
-                padding: 1.5rem;
-                box-shadow: 5px 3px 5px black;
-                transition: background-color 0.5s, box-shadow 0.5s;
-            }
-            td:first-child{
-                border-left: 2px solid black;
-                border-radius: 10px 0 0 10px;
-            }
-            td:last-child{
-                border-right: 2px solid black;
-                border-radius: 0 10px 10px 0;
-            }
-        }
-        tr:hover td{
-            background-color: @lightblue-hover;
-            box-shadow: none;
-        }
-    }
 }
     
